[gd_scene load_steps=6 format=3 uid="uid://c5hido18wam2h"]

[ext_resource type="Script" path="res://GameOver.gd" id="1_4wakh"]
[ext_resource type="Texture2D" uid="uid://clkgjbrwrynyd" path="res://ASSETS/menuBackground.png" id="2_pauqe"]

[sub_resource type="LabelSettings" id="LabelSettings_21b5e"]
font_size = 45
font_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_p6t0f"]
font_size = 28
font_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_c65lx"]
font_size = 28
font_color = Color(0, 0, 0, 1)

[node name="GameOver" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_4wakh")

[node name="MenuBackground" type="Sprite2D" parent="."]
position = Vector2(-8, 0)
scale = Vector2(10.069, 10.125)
texture = ExtResource("2_pauqe")
centered = false

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
layout_mode = 0
offset_left = -28.0
offset_top = -14.0
offset_right = 1220.0
offset_bottom = 698.0
color = Color(0.831373, 0.831373, 0.831373, 1)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -130.0
offset_top = -6.0
offset_right = 130.0
offset_bottom = 117.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="GoMenu" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Menu"

[node name="PlayAgain" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Play Again"

[node name="Quit" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Quit"

[node name="GameOver" type="Label" parent="."]
layout_mode = 2
offset_left = 446.0
offset_top = 101.0
offset_right = 836.0
offset_bottom = 167.0
text = "Game Over
"
label_settings = SubResource("LabelSettings_21b5e")
uppercase = true

[node name="PersonalBest" type="Label" parent="."]
layout_mode = 2
offset_left = 438.0
offset_top = 197.0
offset_right = 828.0
offset_bottom = 243.0
text = "Personal Best: 00:00:00
"
label_settings = SubResource("LabelSettings_p6t0f")
uppercase = true

[node name="CoinStats" type="Label" parent="."]
layout_mode = 2
offset_left = 439.0
offset_top = 266.0
offset_right = 829.0
offset_bottom = 406.0
text = "COINS: ##"
label_settings = SubResource("LabelSettings_c65lx")
uppercase = true

[connection signal="pressed" from="MarginContainer/VBoxContainer/GoMenu" to="." method="_on_go_menu_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/PlayAgain" to="." method="_on_play_again_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
